--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <h1 class="title is-size-1">ToDo List</h1>
             <form id="todoForm">
                 <div class="field has-addons">
-                    <div class="control ml-6 mr-6 is-expanded">
+                    <div class="control mr-2 is-expanded">
                         <input class="input" type="text" placeholder="New Task">
                     </div>
                     <div>
-                        <button class="button mr-6 is-info" type="submit">Add</button>
+                        <button class="button mr-2  is-info" type="submit">Add</button>
                     </div>
                 </div>
             </form>
